fixing tab layout issues

--- a/web/style_screen.css
+++ b/web/style_screen.css
@@ -2,27 +2,29 @@ body {
   font-size:small;
   color: black;
   background-color: #dde3ea;
-  font-family: Baskerville, Times, serif;
+  /*font-family: Baskerville, Times, serif;*/
+  font-family:Optima, sans-serif;
 }
 
-.header {
+#header {
   position: fixed;
   z-index: 1;
   left:0;
   right:0;
   top:0;
-  height: 120px;
+  /*height: 100px;*/
+}
+
+#header h1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  margin: 0;
   background-color: #dde3ea;
   overflow-x: hidden;
   background-image: url('header100.jpg');
-  background-size: auto 50px;
+  background-size: auto 80px;
   background-repeat: repeat no-repeat;
-}
-
-.header h1 {
-  padding-top: 10px;
-  padding-left: 20px;
-    margin: 0;
 }
 
 .tab {
@@ -86,16 +88,16 @@ body {
   padding-top: 20px;
 }
 
-.sidebar_objquery {
+#sidebar_objquery {
   height: 100%;
-  width: 320px; 
   position: fixed;
   z-index: 2; 
-  top: 150px;
+  top: 0;
   left: 0;
   background-color: #c2cad6;
   overflow-x: hidden;
   padding-top: 20px;
+  display: table;
 }
 
 .query {
@@ -107,29 +109,29 @@ body {
     margin-top: 60px; /* same as header height*/
 }
 
-.results_objquery {
-    margin-left: 320px; /* must be same as width of .objquery */
-    margin-top: 60px; /* same as header height*/
+#results_objquery {
+    /*margin-left: 320px;*/ /* must be same as width of .objquery */
+    margin-top: 120px; /* same as header height*/
 }
 
-.results_objquery table {
+#results_objquery table {
   border-collapse: collapse;
   background-color: #dae2ed;
 }
 
-.results_objquery table td {
+#results_objquery table td {
   border: 1px solid #bbb;
   padding: 8px;
 }
 
-.results_objquery table th {
+#results_objquery table th {
   background-color: #91a4bb;
   font-weight: bold;
   border: 1px solid #bbb;
   padding: 8px;
 }
 
-.results_objquery tr:nth-child(even){background-color: #e9eff7;}
+#results_objquery tr:nth-child(even){background-color: #e9eff7;}
 
 
 .error {
